--- a/src/assets/globalStyles.scss
+++ b/src/assets/globalStyles.scss
@@ -183,3 +183,25 @@ td { vertical-align: middle; }
 }
 
  
+ .table-row {
+  overflow: hidden;
+  transition: height 350ms;
+  &-enter,
+  &-leave-to {
+    opacity: 0;
+  }
+  &-leave,
+  &-enter-to {
+    opacity: 1;
+  }
+  &-enter-active,
+  &-leave-active {
+    transition: opacity 200ms ease-in-out;
+  }
+  &-enter-active {
+    transition-delay: 100ms;
+  }
+  &-move {
+    transition: transform 1s;
+  }
+}
